# django-debug-toolbar-assistant

./: .gitignore  MANIFEST.in  README.md  pyproject.toml  setup.py
django_debug_toolbar_assistant_panel/: __init__.py  apps.py  panel.py  urls.py  views.py
django_debug_toolbar_assistant_panel/static/__debug__/djdt_assistant_panel/css/: panel.css
django_debug_toolbar_assistant_panel/static/__debug__/djdt_assistant_panel/js/: panel.js
django_debug_toolbar_assistant_panel/templates/panels/: djdt_assistant.html
